Stop tracking and remove properties file

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ build/
 
 ### VS Code ###
 .vscode/
-
+**/META-INF
 ### Logs ###
 /logs/
+
+### Application Properties ###
+**/application.properties
