Restore properties file since all values are variables

--- a/.gitignore
+++ b/.gitignore
@@ -31,9 +31,8 @@ build/
 
 ### VS Code ###
 .vscode/
-**/META-INF
+/src/main/resources/META-INF
 ### Logs ###
 /logs/
 
 ### Application Properties ###
-**/application.properties
